--- a/SpringBootApplication/pom.xml
+++ b/SpringBootApplication/pom.xml
@@ -44,6 +44,11 @@
             <version>2.1.6.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
             <version>1.0.2</version>
