--- a/SpringBootApplication/src/main/resources/application.yml
+++ b/SpringBootApplication/src/main/resources/application.yml
@@ -1,5 +1,10 @@
 spring:
   datasource:
-    username: admin
-    password: admin
-    url: jdbc:mysql://localhost/sample
+    username: sa
+    password: password
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
